tests/front_end/input/variable_use_analysis/errors/variable_not_found.wl
// Error at line 3, column 12: Variable `zero` not found
int main() {
    return zero;
}